--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/pepperoni-pizza.html">Pepperoni Pizza</a>
+        <a href="recipes/bbq-ribs.html">BBQ Ribs</a>
+        <a href="recipes/chicken-thighs.html">Chicken Thighs</a>
     </body>
 </html>
