--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pepperoni-pizza.html">Pepperoni Pizza</a>
-        <a href="recipes/bbq-ribs.html">BBQ Ribs</a>
-        <a href="recipes/chicken-thighs.html">Chicken Thighs</a>
+        <ul>
+            <li><a href="recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
+            <li><a href="recipes/bbq-ribs.html">BBQ Ribs</a></li>
+            <li><a href="recipes/chicken-thighs.html">Chicken Thighs</a></li>
+        </ul>
     </body>
 </html>
